--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,134 +4,232 @@
     box-sizing: border-box;
 }
 
-#header {
-    margin: 10px;
-    padding: 50px;
-    height: 250px;
-    background-image: url(../images/tejido.jpg);
-    background-position: 50%;
-    background-size: cover;
+body {
+    font-family: cursive;
+}
+
+.header .Logo img {
+    margin: .5%;
+    width: 4%;
+}
+
+.Navegadores {
+    margin: .25%;
+    width: 100%;
+    background-color: palevioletred;
     border-radius: 40px;
-    font-family: fantasy;
-}
-
-#header .Logo img {
-    width: 100px;
-}
-
-#header .Navegadores li {
-    list-style: none;
-    display:inline-block;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 120px;
-    margin-right: 10px;
-    padding-left: 10px;
-    position: relative;
     text-align: center;
-    
 }
 
-#header .Navegadores li a {
-    color: pink;
-    font-size: 25px;
+.Navegadores li {
+    list-style: none;
+    display: inline-flex;
+    padding: 1%;
+}
+
+.Navegadores li a {
+    color: white;
+    font-size: larger;
     text-decoration: none;
-    background-color: blueviolet;
-    size: 50px;
+    background-color: palevioletred;
+    size: 200px;
     border-radius: 5px;
-    display: block;
 }
 
-#header .Navegadores li ul {
+.Navegadores li ul {
     display: none;
     position: absolute;
 }
 
-#header .Navegadores a:hover {
+.Navegadores a:hover {
     background-color: white;
-    color:pink;
+    color: palevioletred;
 }
 
-#header .Navegadores li:hover ul {
+.Navegadores li:hover ul {
     display: block;
-    right: 0px;
-    top: 0px;
-
+    padding: 1.5%;
 }
 
-#header .Navegadores li ul li {
+.Navegadores li ul li {
     position: relative;
 }
 
 body {
-    background-color: rgb(232, 215, 218);
+    background-image: linear-gradient(to bottom, rgb(169, 199, 218), palevioletred);
 }
 
-#Principal {
-    margin: 50px;
+.carouselSlide {
+    width: 70%;
+    margin-top: 1%;
+    margin-left: 15%;
+    display: inline-block;
+    justify-items: end;
 }
 
-#Principal .Intro {
-    padding: 10px;
-    font-size:20px;
-    font-weight: 200px;
-    font-stretch: expanded;
+.Titulo {
+    margin: 2%;
+    font-size:large;
     text-align: center;
-    font-family: fantasy; 
 }
 
-#Principal .Textos {
-    padding: 30px;
-    font-size: 30px;
-    font-weight: 100;
-    text-align: left;
-    font-family: fantasy;
-    text-align: justify;
+.Subtitulo {
+    margin: 2%;
+    font-size: small;
+    text-align: center;
 }
 
-#Principal .Central {
-    padding: 30px;
+.Principal {
+    margin: 3%;
+    padding: 1%;
+    border: solid rgb(169, 199, 218);
+    border-radius: 40px;
     display: flex;
-    position: relative;
-    font-family: fantasy;
+    font-size: larger;
+    text-align: center;
+    align-items: center;
+}
+
+.Principal img {
+    width: 75%;
 }
 
 .Central {
-    margin: 20px;
-    padding: 10px;
+    margin: 3%;
+    padding: 1%;
+    border: solid rgb(169, 199, 218);
+    border-radius: 40px;
+    display: flex;
+    font-size: larger;
+    text-align: center;
+    align-items: center;
 }
 
-.Peques {
-    margin: 5px;
+.Video {
+    text-align: center;
+        
 }
 
-.Casita {
-    margin: 5px;
+.Ubicacion {
+    margin: 2%;
+    padding: 2%;
+    display: block;
+    border: solid rgb(169, 199, 218);
+    border-radius: 40px;
+    text-align: center;             
+}
+
+.Suscribite {
+    margin: 3%;
+    padding: 3%;
+    display: flexbox;
+    text-align: right;
+}
+
+.Contacto {
+    margin: 3%;
+    padding: 3%;
+    display: flexbox;
+    text-align: center;
+}
+
+.Cafecito {
+    margin: 2%;
+    text-align: center;
+}
+
+.Peques1, .Peques2, .Peques3 {
+    margin: 1%;
+    padding: 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.Categorias {
+    margin: 1%;
+    padding: 1%;
+    border: solid palevioletred;
+    border-radius: 40px;
+    font-size: large;
+    display: block;
+    text-align: center;
+}
+
+.Categorias li {
+    list-style-position: inside;
+}
+
+.Tabla {
+    margin: 1%;
+    padding: 1%;
+    border: solid rgb(169, 199, 218);
+    border-radius: 40px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.Casita1, .Casita2, .Casita3 {
+    margin: 1%;
+    padding: 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.Casita img {
+    width: 100%;
 }
 
 .Whatsapp {
-    position: relative;
+    margin: 2%;
+    display: block;
+    text-align: end;
 }
 
-#Pie {
-    margin: 5px;
-    padding: 40px;
-    height: 200px;
-    background-color: lightskyblue;
+.Pie {
+    margin: 1%;
+    padding: .1%;
+    width: auto;
+    background-color: rgb(169, 199, 218);
     border-radius: 40px;
-    font-family: fantasy;
     text-align: center;
+}
+
+.Pie img {
+    width: 4%;
 }
 
 .Suscribite {
     margin: 5px;
 }
 
-.Tabla {
-    margin: 10px;
-    padding: 40px;
-    font-family: fantasy;
-    text-align: center;
-    display: flex;
-    position: relative;
+@media (max-width: 720px) {
+    .Logo, .Navegadores li, .Principal, .Central, .Ubicacion, .Video {
+        display: block;
+        text-align: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 720px) {
+    .Navegadores li:hover ul {
+        display: none;
+    }
+}
+
+@media (max-width: 720px) {
+    iframe {
+        width: 90%;
+    }
+}
+
+@media (max-width: 720px) {
+    .Peques1, .Peques2, .Peques3, .Casita1, .Casita2, .Casita3 {
+        display: grid;
+        grid-template-columns: 100%;
+    }
 }
