--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,104 +1,158 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
 }
 
 body {
     font-family: lato, sans-serif;
     overflow-x: hidden;
-    background-image: linear-gradient(to bottom, rgb(169, 199, 218), palevioletred);
-}
-
-.header .Logo img {
-    margin: .5%;
-    width: 4%;
-}
-
-.Navegadores {
-    margin: 1%;
-    padding: 1%;
-    width: auto;
-    background-image: linear-gradient(to top, rgb(169, 199, 218), palevioletred);
-    border-radius: 40px;
-    text-align: center;
-}
-
-.Navegadores li {
-    list-style: none;
-    display: inline-flex;
-    padding: 2%;
-}
-
-.Navegadores li a {
-    color: white;
-    font-size: larger;
-    text-decoration: none;
-    background-color: palevioletred;
-    size: 200px;
-    border-radius: 5px;
-}
-
-.Navegadores li ul {
-    display: none;
-    position: absolute;
-}
-
-.Navegadores a:hover {
-    background-color: white;
-    color: palevioletred;
-}
-
-.Navegadores li:hover ul {
-    display: block;
-    padding: 1.5%;
-}
-
-.Navegadores li ul li {
-    position: relative;
+    background-image: linear-gradient(to bottom, rgb(192, 192, 192), rgb(205, 151, 169));
 }
 
 #carouselSlidesOnly {
     margin: 1%;
     padding: 1%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.Logo img {
+    width: 12%;
+}
+
+.navBar {
+    margin: 1%;
+    padding: 1%;
+    width: 98%;
+    height: auto;
+    background-image: linear-gradient(to top, rgb(255, 255, 255), rgb(74, 74, 74));
+    border-radius: 20px;
+    display: flex;
+    position: -webkit-sticky;
+    position: sticky;
+    align-items: center;
+    justify-content:space-around;
+    top: 7px;
+    z-index: 1;
+}
+
+.navBar2 {
+    margin: 1%;
+    padding: 1%;
+    width: 98%;
+    height: auto;
+    background-image: linear-gradient(to top, rgb(255, 255, 255), rgb(74, 74, 74));
+    border-radius: 20px;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content:space-around;
+    top: 7px;
+    z-index: 1;
+}
+
+.Navegadores li {
+    list-style: none;
+    display: inline-flex;   
+}
+
+.Navegadores li a {
+    margin-top: 10%;
+    padding: .5rem;
+    color: white;
+    font-size: larger;
+    text-decoration: none;
+    background-color: rgb(205, 151, 169);
+    size: 200px;
+    border-radius: 20px;
+    transition: .4s ease-in-out all;
+}
+
+.Navegadores a:hover {
+    background-color: white;
+    color: rgb(205, 151, 169);
+    transform: translateY(8px);
 }
 
 .Titulo {
-    margin: 2%;
+    margin: 7%;
+    padding: 7%;
+    font-size:larger;
+    text-align: center;
+    font-weight: 100;
+}
+
+.Titulo2 {
+    margin: 5% 1% 1% 1%;
+    padding: 5%;
+    font-size: 25px;
+    text-align: justify;
+}
+
+.Titulo3 {
+    margin: 7.5% 1% 1% 1%;
+    padding: 5%;
+    font-size: 25px;
+    text-align: justify;
+}
+
+.Subtitulo {
+    margin: 5%;
     font-size:large;
     text-align: center;
 }
 
-.Subtitulo {
-    margin: 2%;
-    font-size: small;
-    text-align: center;
-}
-
 .Principal {
-    margin: 3%;
+    margin: 1%;
     padding: 1%;
-    border: solid rgb(169, 199, 218);
-    border-radius: 40px;
+    border: solid rgb(192, 192, 192);
+    border-radius: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    place-content: center;
-    font-size: x-large;
+    grid-template-rows: auto auto;
+    gap: 5px;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    font-size: larger;
 }
 
 .Principal img {
-    width: 75%;
+    width: 50%;
 }
 
 .Central {
-    margin: 3%;
+    margin: 10% 1% 1% 1%;
     padding: 1%;
-    border: solid rgb(169, 199, 218);
-    border-radius: 40px;
+    border: solid rgb(192, 192, 192);
+    border-radius: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-content: center;
+    justify-items: center;
+    align-items: center;
+    text-align: justify;
+    font-size: 25px;
+}
+
+.Central img {
+    width: 75%;
+}
+
+.Central2 {
+    margin: 5% 1% 1% 1%;
+    padding: 1%;
+    border: solid rgb(192, 192, 192);
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-content: center;
+    justify-items: center;
+    align-items: center;
     font-size: x-large  ;
+}
+
+.Central2 img {
+    width: 80%;
 }
 
 .Video {
@@ -107,26 +161,29 @@ body {
 }
 
 .Ubicacion {
-    margin: 2%;
-    padding: 2%;
-    display: block;
-    border: solid rgb(169, 199, 218);
-    border-radius: 40px;
-    text-align: center;             
+    margin: 5%;
+    padding: 3%;
+    display: grid;
+    grid-template-rows: auto auto;
+    border: solid rgb(192, 192, 192);
+    border-radius: 20px;
+    justify-items: center;             
 }
 
 .Suscribite {
     margin: 3%;
-    padding: 3%;
-    display: flexbox;
-    text-align: right;
+    padding: 5%;
+    display: grid;
+    justify-content: end;
+    justify-items: end;
 }
 
 .Contacto {
-    margin: 3%;
+    margin: 2.5%;
     padding: 3%;
-    display: flexbox;
-    text-align: center;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
 }
 
 .Cafecito {
@@ -143,10 +200,34 @@ body {
     justify-items: center;
 }
 
+.Peques1 img {
+    transition: transform .3s;
+}
+
+.Peques1 img:hover {
+    transform: scale(1.2);
+}
+
+.Peques2 img {
+    transition: transform .3s;
+}
+
+.Peques2 img:hover {
+    transform: scale(1.2);
+}
+
+.Peques3 img {
+    transition: transform .3s;
+}
+
+.Peques3 img:hover {
+    transform: scale(1.2);
+}
+
 .Categorias {
-    margin: 1%;
+    margin: 12% 1% 5% 1%;
     padding: 1%;
-    border: solid palevioletred;
+    border: solid rgb(205, 151, 169);
     border-radius: 40px;
     font-size: large;
     display: block;
@@ -158,15 +239,14 @@ body {
 }
 
 .Tabla {
-    margin: 1%;
+    margin: 5%;
     padding: 1%;
-    border: solid rgb(169, 199, 218);
+    border: solid rgb(192, 192, 192);
     border-radius: 40px;
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: space-evenly;
-
 }
 
 .Casita1, .Casita2, .Casita3 {
@@ -181,53 +261,74 @@ body {
     width: 100%;
 }
 
+.Casita1 img {
+    transition: transform .3s;
+}
+
+.Casita1 img:hover {
+    transform: scale(1.2);
+}
+
+.Casita2 img {
+    transition: transform .3s;
+}
+
+.Casita2 img:hover {
+    transform: scale(1.2);
+}
+
+.Casita3 img {
+    transition: transform .3s;
+}
+
+.Casita3 img:hover {
+    transform: scale(1.2);
+}
+
 .Whatsapp {
-    margin: 2%;
-    display: grid;
-    place-content: end;
+    margin: 3%;
+    display: flex;
+    position: relative;
+    justify-content: end;
 }
 
 .Pie {
-    margin: 1%;
+    margin: 5% 1% 1% 1%;
     padding: 1%;
     display: block;
-    width: auto;
-    background-image: linear-gradient(to top, rgb(169, 199, 218), palevioletred);
+    width: 100%;
+    background-image: linear-gradient(to top, rgb(192, 192, 192), rgb(205, 151, 169));
     text-align: center  ;
     border-radius: 40px;
-
 }
-
 
 .Pie img {
     width: 4%;
-    transition: width 2s;
+    transition: width .5s;
 }
 
 .Pie img:hover {
-    width: 10%;
-}
-
-.Suscribite {
-    margin: 5px;
+    width: 7%;
 }
 
 @media (max-width: 720px) {
-    .Navegadores li, .Principal, .Central, .Ubicacion, .Video {
+    .navBar, .navBar2, .Principal, .Central, .Central2, .Ubicacion, .Video {
         display: block;
-        justify-content: center;
+        text-align: center;
     }
- 
-    .Logo {
-        display: flex;
-        width: 300%;
-        padding-left: 48%;
+
+    .Central, .Categorias {
+        margin-top: 32%;
     }
- 
-    .Navegadores li:hover ul {
-        display: none;
+    
+    .Titulo2 {
+        margin-top: 5%;
     }
- 
+
+    .Titulo3 {
+        margin-top: 32%;
+    }
+
     iframe {
         width: 90%;
     }
